packages/typ/tests/fixtures/diagnostics/0824_polyvar_closed_row_extra_pattern_07.ml
let use_eta : [ `A of int ] -> int = function
  | `A x -> x
  | `B -> 6
